# tfm_slm

./: .env.example  .geminiignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  GEMINI.md  PR_DOCKER_CI.md  PR_OPTIMIZATION_REPORT.md  README.md  SETUP_BACKEND.md  aws-trust-policy.json  markdowns  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: aws.yml  deploy.yml  docker-ci.yml  docker-image.yml  training-pipeline.yml
app/: config.py  inference.py  main.py
app/chat/: __init__.py  chat.py
app/dataset/: __init__.py  constants.py  downloader.py  processor.py
app/model/: architecture.py
app/terraform/: README.md  ec2.tf  ecr.tf  outputs.tf  provider.tf  s3.tf  variables.tf
app/training/: trainer.py
markdowns/: COMMANDS.md
report/: main.luabridge.lua  main.tex  portada.tex
report/NOTOCAR/: comands.tex  contents.tex  format.tex  index.tex  packages.tex
report/bibliography/: papers.bib
report/content/: 1.tex  2.tex  3.tex  4.tex  5.tex  6.tex  7.tex  8.tex  9.tex  abstract.tex
report/markdowns/: CHEAT_SHEET.md
terraform/: main.tf
tests/: test_main.py
tests/dataset/: test_dataset_downloader.py
