[project]
name = "tfm-slm"
version = "0.1.0"
description = "slm for tfm (transformers and gru)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[tool.ruff]
src = ["app"]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "S", "UP"]
ignore = []

[tool.ruff.format]
line-ending = "auto"

[tool.ty]

[tool.ty.rules]
invalid-argument-type = "ignore"